[gd_scene load_steps=7 format=3 uid="uid://b7uvruvkq4wt7"]

[ext_resource type="Script" path="res://Scripts/map/region.gd" id="1_5baho"]
[ext_resource type="PackedScene" uid="uid://b6j4mal61e2ag" path="res://Scenes/map/label.tscn" id="2_rpk60"]
[ext_resource type="Script" path="res://Scripts/map/world_entity_collision_control.gd" id="3_esrkd"]

[sub_resource type="ViewportTexture" id="ViewportTexture_h28k0"]
viewport_path = NodePath("label/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yj1j0"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_h28k0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c10ds"]
albedo_color = Color(1, 0.247059, 0.266667, 1)

[node name="region" type="Node3D" node_paths=PackedStringArray("label")]
script = ExtResource("1_5baho")
label = NodePath("label")

[node name="outline" type="Node3D" parent="."]

[node name="nodes" type="Node3D" parent="."]

[node name="label" parent="." node_paths=PackedStringArray("textedit") instance=ExtResource("2_rpk60")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.11)
material_override = SubResource("StandardMaterial3D_yj1j0")
textedit = NodePath("SubViewport/TextEdit")

[node name="MeshStaticBody" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)
script = ExtResource("3_esrkd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshStaticBody"]

[node name="mesh" type="MeshInstance3D" parent="MeshStaticBody"]
material_override = SubResource("StandardMaterial3D_c10ds")
transparency = 0.49
skeleton = NodePath("../..")

[node name="waypoints" type="Node3D" parent="."]

[connection signal="input_event" from="MeshStaticBody" to="." method="_on_mesh_static_body_input_event"]
[connection signal="mouse_entered" from="MeshStaticBody" to="." method="_on_mesh_static_body_mouse_entered"]
[connection signal="mouse_exited" from="MeshStaticBody" to="." method="_on_mesh_static_body_mouse_exited"]
